Add BeaconManager iOS App.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 *.s#?
 *.b#?
 *.l#?
+beacon_manager/iOS/BeaconManager/BeaconManager.xcodeproj/xcuserdata
+beacon_manager/iOS/BeaconManager/BeaconManager.xcodeproj/project.xcworkspace/xcuserdata
